public class Player {

    private String name;


    public Player(String name) {
        this.name = name;
    }

    public String toString() {

        return this.name;
    }


}
